fixes html being too wide

--- a/app/assets/stylesheets/readable.css
+++ b/app/assets/stylesheets/readable.css
@@ -3953,9 +3953,6 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     padding-top: 14px;
     padding-bottom: 14px;
   }
-  .navbar-nav.navbar-right:last-child {
-    margin-right: -15px;
-  }
 }
 @media (min-width: 768px) {
   .navbar-left {
@@ -3967,7 +3964,6 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-form {
   margin-left: -15px;
-  margin-right: -15px;
   padding: 10px 15px;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
